package com.chk.designpattern.factoryMethod;

/**
 * @author changhongkai
 * @date 2018/12/14 上午11:02
 */
public abstract class CanFactoryAbstract {

    abstract public FruitCanAbstract produce();

}
