package com.chk.designpattern.factoryMethod;

/**
 * @author changhongkai
 * @date 2018/12/14 上午11:04
 */
public abstract class FruitCanAbstract {
    abstract public String name();
}
